# Topsis

./: README.md
1 - Topsis Implementation/: result.csv  topsis.py
2 - PyPI Package - Topsis-Lakshay-102303872/: README.md  out.csv  pyproject.toml
2 - PyPI Package - Topsis-Lakshay-102303872/Topsis_Lakshay_102303872.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
2 - PyPI Package - Topsis-Lakshay-102303872/topsis_lakshay_102303872/: __init__.py  topsis.py
3 - Topsis Web Service/: app.py  requirements.txt  streamlit_app.py
3 - Topsis Web Service/outputs/: result.csv
3 - Topsis Web Service/templates/: index.html
3 - Topsis Web Service/uploads/: data.csv
